--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <nav class="navigation">
                 <!-- <img src="assets/exit.svg" alt="exit mobile menu"> -->
                 <ul class="primary-nav">
-                    <li><a href="#">About me</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#">Stack</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -34,11 +34,17 @@
         </div>
     </section>
 
-    <section class="about-me">
+    <section id="about-me" class="about-me">
         <div class="container-about-me">
             <img src="assets/human2.png" alt="Human with laptop">
             <h1>About me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, tempore, dolor laborum fuga temporibus ea error explicabo sed minus facere soluta ullam doloribus illo. Tenetur provident temporibus id nulla assumenda.</p>
+        </div>
+    </section>
+
+    <section id="portfolio" class="portfolio">
+        <div class="container-portfolio">
+            <h1>My latest work</h1>
         </div>
     </section>
 
