added box shadows

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="korni-left">
                     <h3>Blog Korniutious</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit temporibus dolorum architecto repudiandae harum provident voluptate. Repellat iusto eos earum repellendus, magnam dolorum quam mollitia natus. Dignissimos, quis. Consectetur, suscipit.</p>
-                    <a href="#">Visit</a>
+                    <a href="https://kornitious.pl/">Visit</a>
                 </div>
                 <div class="korni-right">
                     <img src="assets/travel.png" alt="Travel picture">
