added next project

--- a/index.html
+++ b/index.html
@@ -56,17 +56,31 @@
 
     <section id="portfolio" class="portfolio">
         <div class="container-portfolio">
+
             <h1>My latest work</h1>
+
             <div class="korni">
                 <div class="korni-left">
-                    <h3>Blog Korniutious</h3>
+                    <h3>Private Blog korniutious.pl</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit temporibus dolorum architecto repudiandae harum provident voluptate. Repellat iusto eos earum repellendus, magnam dolorum quam mollitia natus. Dignissimos, quis. Consectetur, suscipit.</p>
-                    <a href="https://kornitious.pl/">Visit</a>
+                    <a href="https://kornitious.pl/" target="_blank">Visit</a>
                 </div>
                 <div class="korni-right">
                     <img src="assets/travel.png" alt="Travel picture">
                 </div>
             </div>
+
+            <div class="training">
+                <div class="training-left">
+                    <img src="assets/list.svg" alt="Check illustration">
+                </div>
+                <div class="training-right">
+                    <h3>Training SCSS landing page</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit temporibus dolorum architecto repudiandae harum provident voluptate. Repellat iusto eos earum repellendus, magnam dolorum quam mollitia natus. Dignissimos, quis. Consectetur, suscipit.</p>
+                    <a href="https://wojtasbjj.github.io/frontend2021/" target="_blank">Visit</a>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
