added contact section

--- a/index.html
+++ b/index.html
@@ -80,29 +80,32 @@
                     <a href="https://wojtasbjj.github.io/frontend2021/" target="_blank">Visit</a>
                 </div>
             </div>
-
-        <section id="stack" class="stack">
-            <h1>What i do</h1>
-            <div class="container-stack">
-                <div class="dev">
-                    <img src="assets/dev.png" alt="Developer illustration">
-                    <h3>Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quae non est? Voluptate dolores, perferendis aliquid eos sapiente repellendus, eum dignissimos cupiditate inventore voluptatum quam, asperiores nihil alias. Nihil, accusantium.</p>
-                </div>
-                <div class="ui">
-                    <img src="assets/ui.png" alt="UI/UX illustration">
-                    <h3>UI/UX</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ducimus quas officiis atque sed rerum ipsa, ullam temporibus aperiam, natus facilis aliquam! Aut soluta perferendis accusantium error molestias earum molestiae!</p>
-                </div>
-                <div class="teamwork">
-                    <img src="assets/teamwork.png" alt="Teamwork illustration">
-                    <h3>Teamwork</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti cumque quae accusamus quia iste eveniet aut a tempora animi quas iusto ullam reiciendis illo dolorum accusantium, inventore natus dicta repellendus?</p>
-                </div>
-            </div>
-        </section>
-
         </div>
+    </section>
+
+    <section id="stack" class="stack">
+        <h1>What i do</h1>
+        <div class="container-stack">
+            <div class="dev">
+                <img src="assets/dev.png" alt="Developer illustration">
+                <h3>Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quae non est? Voluptate dolores, perferendis aliquid eos sapiente repellendus, eum dignissimos cupiditate inventore voluptatum quam, asperiores nihil alias. Nihil, accusantium.</p>
+            </div>
+            <div class="ui">
+                <img src="assets/ui.png" alt="UI/UX illustration">
+                <h3>UI/UX</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ducimus quas officiis atque sed rerum ipsa, ullam temporibus aperiam, natus facilis aliquam! Aut soluta perferendis accusantium error molestias earum molestiae!</p>
+            </div>
+            <div class="teamwork">
+                <img src="assets/teamwork.png" alt="Teamwork illustration">
+                <h3>Teamwork</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti cumque quae accusamus quia iste eveniet aut a tempora animi quas iusto ullam reiciendis illo dolorum accusantium, inventore natus dicta repellendus?</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+
     </section>
 </body>
 </html>
