--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
     </section>
 
     <section id="contact" class="contact">
+        <form class="contact-form" action="contactform.php" method="POST">
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="mail" placeholder="e-mail">
+            <textarea name="message" placeholder="message" cols="30" rows="10"></textarea>
+            <button type="submit" name="submit">Send message</button>
+        </form>
+    </section>
+
+    <section class="footer">
 
     </section>
 </body>
