--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <input type="text" name="name" placeholder="Name">
             <input type="text" name="mail" placeholder="e-mail">
             <textarea name="message" placeholder="message" cols="30" rows="10"></textarea>
-            <button type="submit" name="submit">Send message</button>
+            <button type="submit" name="submit">Send messageee</button>
         </form>
     </section>
 
