--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     </section>
 
     <section id="contact" class="contact">
-        <form class="contact-form" action="contactform.php" method="POST">
+        <form class="contact-form" action="contact-form-handler.php" method="POST">
             <input type="text" name="name" placeholder="Name">
-            <input type="text" name="mail" placeholder="e-mail">
+            <input type="text" name="email" placeholder="e-mail">
             <textarea name="message" placeholder="message" cols="30" rows="10"></textarea>
-            <button type="submit" name="submit">Send messageee</button>
+            <button type="submit" name="submit">Send</button>
         </form>
     </section>
 
